src/test/testFiles/valid/casting.val
let x = 'a';

let y = toNumber(x);

let z = toChar(y);

let stack = Stack<number>();

stack.push(y);