src/test/testFiles/invalid/semanticErrors/arrayInvalidTypesInInitialiserCheck.val
let x = Array<number>(){true, false, true}